# Nicky

./: .gitignore  Cargo.toml  Dockerfile  nicky.html
assets/: icon.afdesign
src/: main.rs
